kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-auth-github-deployment
  namespace: crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-auth-github
  template:
    metadata:
      labels:
        app: crud-auth-github
    spec:
      containers:
      - name: crud-auth-github
        image: piwero/crud_auth_github-crud-auth-github:latest
        imagePullPolicy: IfNotPresent
        ports:
            - name: http
              containerPort: 9898
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
            - name: grpc
              containerPort: 9999
              protocol: TCP
      volumes:
      - name: app-volume
        emptyDir: {}
