kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-auth-github-service
  namespace: crud-app
spec:
  type: NodePort
  selector:
    app: crud-auth-github
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
