kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  namespace: crud-app
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
#      targetPort: 5432
